--- a/src/app/graficas/pages/barras/barras.component.html
+++ b/src/app/graficas/pages/barras/barras.component.html
@@ -1,1 +1,17 @@
-<p>barras works!</p>
+<h1>Gráficas de barras</h1>
+<hr>
+
+<div class="row">
+  <div class="col">
+    <div style="display: block">
+      <canvas
+        baseChart
+        [data]="barChartData"
+        [options]="barChartOptions"
+        [type]="barChartType"
+      >
+      </canvas>
+    </div>
+    <button class="btn btn-primary" (click)="randomize()">Update</button>
+  </div>
+</div>
