--- a/src/app/graficas/pages/dona-http/dona-http.component.html
+++ b/src/app/graficas/pages/dona-http/dona-http.component.html
@@ -1,1 +1,26 @@
-<p>dona-http works!</p>
+<h1>Gráficas de dona-http</h1>
+<hr />
+
+<div
+  class="text-center"
+  *ngIf="doughnutChartData.datasets.length === 0; else torta"
+  >
+  <div class="lds-ripple">
+    <div></div>
+    <div></div>
+  </div>
+</div>
+
+
+<ng-template #torta>
+  <div class="row">
+    <div class="col">
+      <div style="display: block">
+        <canvas baseChart [data]="doughnutChartData" [type]="doughnutChartType">
+        </canvas>
+      </div>
+    </div>
+  </div>
+  
+</ng-template>
+
